--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "Library for Laravel which provides ACL configuration based on user role and accessed controllers.",
     "type": "library",
     "keywords": ["laravel", "access list control", "acl"],
-    "homepage": "https://gitlab.vse.cz/phplibs/laravel-acl",
+    "homepage": "https://github.com/MatejKucera/laravel-acl",
     "license": "MIT",
     "authors": [
         {
             "name": "MatejKucera",
-            "email": "matej.kucera@vse.cz"
+            "email": "matej.kucera@atlas.cz"
         }
     ],
     "minimum-stability": "stable",
@@ -18,6 +18,6 @@
         }
     },
 	"require": {
-	    "php": "^7.1"
+	    "php": "^7.1|^8.0"
     }
 }
